<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/container"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    >
    <LinearLayout
        android:id="@+id/pickerWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <com.henninghall.date_picker.pickers.IosClone
            android:id="@+id/empty_start"
            android:tag="empty_start"
            android:layout_weight="4"
            custom:npv_ShownCount="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            custom:npv_DividerColor="#cccccc"
            />
        <com.henninghall.date_picker.pickers.IosClone
            android:id="@+id/year"
            android:layout_weight="1"
            android:tag="year"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            custom:npv_ShownCount="5"
            custom:npv_RespondChangeOnDetached="false"
            custom:npv_TextSizeNormal="18dp"
            custom:npv_TextSizeSelected="21dp"
            custom:npv_TextColorSelected="#000000"
            custom:npv_TextColorNormal="#aaaaaa"
            custom:npv_DividerColor="#cccccc"
            android:contentDescription="@string/year_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.pickers.IosClone
            android:id="@+id/month"
            android:layout_weight="1"
            android:tag="month"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            custom:npv_ShownCount="5"
            custom:npv_RespondChangeOnDetached="false"
            custom:npv_TextSizeNormal="18dp"
            custom:npv_TextSizeSelected="21dp"
            custom:npv_TextColorSelected="#000000"
            custom:npv_TextColorNormal="#aaaaaa"
            custom:npv_DividerColor="#cccccc"
            android:contentDescription="@string/month_description"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

        <com.henninghall.date_picker.pickers.IosClone
            android:id="@+id/date"
            android:tag="date"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            custom:npv_ShownCount="5"
            custom:npv_RespondChangeOnDetached="false"
            custom:npv_TextSizeNormal="18dp"
            custom:npv_TextSizeSelected="21dp"
            custom:npv_TextColorSelected="#000000"
            custom:npv_TextColorNormal="#aaaaaa"
            custom:npv_DividerColor="#cccccc"
            android:contentDescription="@string/date_description"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <com.henninghall.date_picker.pickers.IosClone
            android:id="@+id/day"
            android:tag="day"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            custom:npv_ShownCount="5"
            custom:npv_RespondChangeOnDetached="false"
            custom:npv_TextSizeNormal="18dp"
            custom:npv_TextSizeSelected="21dp"
            custom:npv_TextColorSelected="#000000"
            custom:npv_TextColorNormal="#aaaaaa"
            custom:npv_DividerColor="#cccccc"
            android:contentDescription="@string/day_description"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <com.henninghall.date_picker.pickers.IosClone
            android:id="@+id/hour"
            android:tag="hour"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            custom:npv_DividerColor="#cccccc"
            custom:npv_RespondChangeOnDetached="false"
            custom:npv_ShownCount="5"
            custom:npv_TextColorNormal="#aaaaaa"
            custom:npv_TextColorSelected="#000000"
            custom:npv_TextSizeNormal="18dp"
            custom:npv_TextSizeSelected="21dp"
            android:contentDescription="@string/hour_description"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <com.henninghall.date_picker.pickers.IosClone
            android:id="@+id/minutes"
            android:tag="minutes"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            custom:npv_DividerColor="#cccccc"
            custom:npv_RespondChangeOnDetached="false"
            custom:npv_ShownCount="5"
            custom:npv_TextColorNormal="#aaaaaa"
            custom:npv_TextColorSelected="#000000"
            custom:npv_TextSizeNormal="18dp"
            custom:npv_TextSizeSelected="21dp"
            android:contentDescription="@string/minutes_description"
            android:focusable="true"
            android:focusableInTouchMode="true"
        />

        <com.henninghall.date_picker.pickers.IosClone
            android:id="@+id/ampm"
            android:tag="ampm"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            custom:npv_DividerColor="#cccccc"
            custom:npv_RespondChangeOnDetached="false"
            custom:npv_ShownCount="5"
            custom:npv_TextColorNormal="#aaaaaa"
            custom:npv_TextColorSelected="#000000"
            custom:npv_TextSizeNormal="18dp"
            custom:npv_TextSizeSelected="21dp"
            android:contentDescription="@string/ampm_description"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
            
        <com.henninghall.date_picker.pickers.IosClone
            android:id="@+id/empty_end"
            android:tag="empty_end"
            android:layout_weight="4"
            custom:npv_ShownCount="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            custom:npv_DividerColor="#cccccc"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="-1dp"
        >
        <ImageView
            android:id="@+id/overlay_top"
            android:src="@drawable/overlay"
            android:layout_width="match_parent"
            android:contentDescription="@string/overlay"
            android:layout_height="0dp"
            android:rotation="180"
            android:layout_weight=".15"
            android:importantForAccessibility="no"
            />

        <View
            android:layout_height="0dp"
            android:layout_weight=".70"
            android:layout_width="match_parent"
            />

        <ImageView
            android:id="@+id/overlay_bottom"
            android:src="@drawable/overlay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15"
            android:importantForAccessibility="no"
        />
    </LinearLayout>

</RelativeLayout>
